public/css/style.css
.spelling-bee-helper {
    margin-top: 70px;
    font-family: "nyt-franklin"
}

.spelling-bee-helper-error {
    color: red;
    padding: 8px;
}

.table {
    text-align: center;
    text-transform: uppercase;
    width: auto;
    margin-bottom: 1rem;
    font-size: 1.125rem;
    line-height: 1.5625rem;
}

.row {
    height: 30px;
}

.cell {
    width: 30px;
    min-width: 30px;
    max-width: 30px;
}

td:first-child,
td:last-child,
tr:first-child,
tr:last-child {
    font-weight: 700;
}

.bold {
    font-weight: 700;
}

.spelling-bee-helper-grid {
    font-size: 1.25rem;
    font-weight: 400;
    padding: 8px;
}

.two-letter-list {
    font-size: 1.25rem;
    font-weight: 400;
    padding: 8px;
}

.two-letter-list-row {
    text-transform: uppercase;
}

.two-letter-list-item {
    margin-right: 8px;
}

.spelling-bee-helper-title {
    font-weight: 700;
    padding-bottom: 8px;
}

